fix hover effect of filter indicator on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -458,22 +458,37 @@ summary {
   margin: 0.5em;
 }
 
-.rotate-on-hover {
-  transition: transform 0.3s;
+.filter-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  height: 25px;
+  width: 25px;
+  text-align: center;
   transform-origin: center;
+  transition: all .3s ease-in-out;
+  transition: transform 0.3s;
 }
 
-summary:hover .rotate-on-hover {
-  transform: rotate(180deg);
-}
-
-details[open] .rotate-on-hover {
+.filter-indicator.minus {
   display: none;
 }
 
-details[open] > summary::before {
-  content :"−"
+.filter-indicator.plus {
+  display: flex;
 }
+
+/* >> summary:hover is on bottom */
+
+details[open] .filter-indicator.minus {
+  display: flex;
+}
+
+details[open] .filter-indicator.plus {
+  display: none;
+}
+
 
 @keyframes slideDown {
   from {
@@ -1315,6 +1330,11 @@ div.icon-wrapper object {
     color:grey;
   }
   
+  summary:hover .filter-indicator.plus {
+    transform: rotate(180deg);
+    text-shadow: 0.025em -0.025em 0.056em rgba(0,0,0,0.4), -0.025em 0.025em 0.056em rgba(255,255,255,0.7);
+  }
+
   #hidden-content a.button:hover {
     background-color: white;
     color: rgba(22,24,25,1);
